test/conformance/chainsaw/generate/clusterpolicy/cornercases/clone-role-and-rolebinding/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: gen-clone-role-policy
spec:
  background: false
  rules:
  - generate:
      apiVersion: rbac.authorization.k8s.io/v1
      clone:
        name: ns-role
        namespace: default
      kind: Role
      name: ns-role
      namespace: '{{request.object.metadata.name}}'
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - Namespace
    name: gen-role
  - generate:
      apiVersion: rbac.authorization.k8s.io/v1
      clone:
        name: ns-role-binding
        namespace: default
      kind: RoleBinding
      name: ns-role-binding
      namespace: '{{request.object.metadata.name}}'
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - Namespace
    name: gen-role-binding
