test/conformance/chainsaw/generate/clusterpolicy/cornercases/clone-role-and-rolebinding/chainsaw-step-03-assert-1-1.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: ns-role
  namespace: generate-clone-role-tests
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  verbs:
  - get
  - watch
  - list
  - delete
  - create
